--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-simple-star-rating": "^5.1.7",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
