--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/nextjs": "^4.29.7",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "mongoose": "^8.1.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-rating-stars-component": "^2.2.0",
     "react-simple-star-rating": "^5.1.7",
