--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.7",
+    "@stripe/stripe-js": "^3.0.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "mongoose": "^8.1.3",
@@ -19,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-rating-stars-component": "^2.2.0",
+    "stripe": "^14.17.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
